# dxc-wrapper

./: .gitattributes  CMakeLists.txt
src/dxc-wrapper/: compiler.cc  compiler.hh  file_util.cc  file_util.hh  fwd.hh
src/dxc-wrapper/common/: api.hh  log.cc  log.hh  tinyjson.cc  tinyjson.hh
standalone/: CMakeLists.txt
standalone/src/: entry.cc  entry.hh  main.cc
standalone/src/common/: file_watch.cc  file_watch.hh
